# qtforum-pluginplay

./: CMakeLists.txt  qtforum-pluginplay.pro
src/app/: CMakeLists.txt  app.pro  basicreceiver.cpp  basicreceiver.h  basicsender.h  main.cpp
src/interfaces/: CMakeLists.txt  interfaces.pro  receiverinterface.cpp  receiverinterface.h  senderinterface.cpp  senderinterface.h
src/plugins/: CMakeLists.txt  basicreceiver.cpp  basicreceiver.h  basicreceiver.json  basicreceiver.pro  basicsender.cpp  basicsender.h  basicsender.pro  plugin_global.h  plugins.pro
